2009-08-10 [iwkse]	0.9.7cvs8

	* src/fancy_viewer.c
            Return the string instead of calling again the function

2009-08-10 [iwkse]	0.9.7cvs7

	* src/fancy_viewer.c
            Fix bug 1979: When selection is 0 length return NULL

2009-08-10 [iwkse]	0.9.7cvs6

	* src/fancy_prefs.c
	* src/fancy_viewer.c
            Fix inverted logic for block_links pref

2009-08-10 [iwkse]	0.9.7cvs5

	* src/fancy_viewer.c
            Fix bug 1980
            Use the webkit middle click paste available from version 1.1.12

2009-07-04 [wwp]	0.9.7cvs4

	* src/fancy_viewer.c
		Reset filename pointer we just free'd.
		Fix a potential leak in case of error.
		Slight code simplification.

2009-07-04 [iwkse]	0.9.7cvs3

	* src/fancy_viewer.c
            Add charset detection support
            patch by Aleksei Miheev

2009-07-04 [paul]	0.9.7cvs2

	* po/fi.po
		added by Tommi Pirinen

2009-07-04 [iwkse]	0.9.7cvs1

	* src/fancy_viewer.c
            Fix a double free crash

2009-07-03 [paul]	0.9.7

	0.9.7 released

2009-07-03 [paul]	0.9.6cvs20

	* NEWS
		added (needed by 'make dist')

2009-07-03 [paul]	0.9.6cvs19

	* po/cs.po
	* po/hu.po
	* po/id.po
	* po/it.po
	* po/ja.po
	* po/ru.po
		this time commit the correct files!

2009-07-03 [paul]	0.9.6cvs18

	* commitHelper
		added
	* po/fancy_plugin.pot
		removed
	* po/it.po
		updated by Andrea Spadaccini
	* configure.ac
	* po/cs.po
	* po/es.po
	* po/hu.po
	* po/id.po
	* po/ja.po
	* po/ru.po
		added by David Vachulka, Ricardo Mones, Pader Rezso,
		MSulchan Darmawan, kazken3, and Aleksei Miheev

2009-06-16 [iwkse]	0.9.6cvs17

	* src/fancy_viewer.c
            Fix search for the web broken
            in previous commit

2009-06-16 [iwkse]	0.9.6cvs16

	* src/fancy_viewer.c
	* src/fancy_viewer.h
            Add shortcuts for zoom in (ctrl-+), 
            zoom out (ctrl--), zoom normal (ctrl-.)

2009-06-16 [iwkse]	0.9.6cvs15

	* src/fancy_viewer.c
	* src/fancy_viewer.h
        Fix memory corruption while
        using popup actions
